Added user history
